Front: Fix product card image cropping & make product card bigger
Fixed product card image cropping by replacing 500x500 dimensions
with 420x420, enabled smart cropping in settings
Made product card's detail-wrap bigger so now a product with a long name
(up to three lines) doesn't cause the cards to differ.

Refs POS-2543

--- a/shuup/front/static_src/less/front/product-card.less
+++ b/shuup/front/static_src/less/front/product-card.less
@@ -101,4 +101,7 @@
             margin-left: 5px;
         }
     }
+    .detail-wrap {
+        height: 100px;
+    }
 }
